# English-repeater

./: .gitignore  CMakeLists.txt
include/GUI/: dataform.h  dialogform.h  mainwindow.h  repeatform.h
src/: CMakeLists.txt
src/GUI/: CMakeLists.txt  dataform.cpp  dialogform.cpp  mainwindow.cpp  repeatform.cpp
src/UI/: dataform.ui  dialogform.ui  mainwindow.ui  repeatform.ui
